syntax = "proto3";


option csharp_namespace = "REPF.Grpc";

package forecast;

service CalculateService {
	rpc Calculate (CalculationRequest) returns (CalculationResponse);
}


message CalculationRequest {
    int32 id = 1;
    string municipality = 2;
    string neighborhood = 3;
    float price = 4;
    float squareFootage = 5;
    float rooms = 6;
    float floor = 7;
    bool isLastFloor = 8;
    string heatingType = 9;
    bool hasElevator = 10;
    bool isRegistered = 11;
}

message CalculationResponse {
  double price = 1;
}


